[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/WbcTower/BasedTower.gd" type="Script" id=1]
[ext_resource path="res://assets/wbc/neut/pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/sell.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/upgrade.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.3025

[sub_resource type="CircleShape2D" id=2]
radius = 128.631

[node name="BasedTower" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.224046, -0.648937 )
scale = Vector2( 0.0426937, 0.0473281 )
texture = ExtResource( 2 )

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2( 7.62939e-006, 0 )
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.28
autostart = true

[node name="Sell" type="Button" parent="."]
visible = false
margin_left = -77.0053
margin_top = -72.6385
margin_right = -15.0053
margin_bottom = -16.6385
icon = ExtResource( 3 )
flat = true
align = 2

[node name="Upgrade" type="Button" parent="."]
visible = false
margin_left = 17.1187
margin_top = -71.8707
margin_right = 79.1187
margin_bottom = -15.8707
icon = ExtResource( 4 )
flat = true

[node name="VisibilityTimer" type="Timer" parent="."]
[connection signal="input_event" from="." to="." method="_on_BasedTower_input_event"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_VisibilityTimer_timeout"]
